# productivity-browser-openai-hackathon

./: .gitignore  BRAINSTORM.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.codex/: instructions.md
.cursor/rules/: project.mdc
app/: layout.tsx  page.tsx
backend/: .gitignore  helloworld.py  main.py  productivity.db  pyproject.toml  screenshot_analysis.py
mcps/: README.md
mcps/blinkit/: INSTRUCTIONS.md  SERVER_METADATA.json
mcps/blinkit/tools/: blinkit_get_orders.json  blinkit_order_reward.json  blinkit_reset_orders.json
mcps/sbi-bank/: INSTRUCTIONS.md  SERVER_METADATA.json
mcps/sbi-bank/tools/: sbi_check_balance.json  sbi_deduct_penalty.json  sbi_get_transactions.json  sbi_reset_account.json
readme-images/: images.md
