[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "onnxruntime>=1.23.2",
    "openai>=2.16.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "rapidocr>=3.6.0",
    "uvicorn>=0.40.0",
]
